codama-macros/tests/codama_attribute/type_nodes/string_type_node/encoding_already_set.fail.rs
use codama::codama;

#[codama(type = string(utf8, base64))]
pub struct Test;

#[codama(type = string(encoding = utf8, encoding = base64))]
pub struct TestExplicit;

fn main() {}
